# tape-desktop

./: .gitignore  Me.Xfox.Tape.sln  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
Me.Xfox.Tape.Api/: Class1.cs  Me.Xfox.Tape.Api.csproj  TapeClient.cs
Me.Xfox.Tape.Desktop/: App.axaml  App.axaml.cs  Me.Xfox.Tape.Desktop.csproj  Program.cs  ViewLocator.cs
Me.Xfox.Tape.Desktop/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Me.Xfox.Tape.Desktop/Views/: MainWindow.axaml  MainWindow.axaml.cs
docs/: README.md
src/: api.ts  main.tsx  navcontext.tsx  storage.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  live.rs  main.rs  sign.rs
src/components/: error_fallback.tsx  marker.tsx  phone_code_input.tsx  question.tsx  selector.tsx
src/hooks/: api.ts
src/mocks/: handlers.ts
src/pages/: _app.tsx  live.tsx  login.tsx  question.tsx  questions.tsx
