[package]
name = "tape-desktop"
version = "0.1.0"
description = "A Tauri tape-desktop"
authors = ["you"]
license = ""
repository = ""
default-run = "tape-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = [] }
md5 = "0.7.0"
obfstr = "0.3.0"
rand = "0.8.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
