[package]
name = "tape-desktop"
version = "0.1.0"
description = "A Tauri tape-desktop"
authors = ["you"]
license = ""
repository = ""
default-run = "tape-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = [] }
md5 = "0.7.0"
obfstr = "0.3.0"
rand = "0.8.4"
ureq = { version = "2.4.0", features = ["json"] }
anyhow = "1.0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
